Adjust style and behaviour in collection component

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -192,6 +192,8 @@ $description-color: $font-secondary-color;
     }
     .me-card--single & {
       opacity: 1;
+      padding: 0;
+      margin: 0;
     }
 
     & svg {
