--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -30,9 +30,10 @@
       & i {
         width: 6px;
         height: 6px;
+        display: inline-block;
         background: $brand-color;
         border-radius: 3px;
-        margin: 0 5px 0 0;
+        margin: 0 3px 1px 0;
         box-shadow: 0 0 6px $brand-color;
       }
     }
