--- a/web/app/assets/stylesheets/components/me-notification.scss
+++ b/web/app/assets/stylesheets/components/me-notification.scss
@@ -5,7 +5,8 @@
   box-shadow: 0 0 50px #00000012;
   @include mobile-only {
     padding: 20px 12px 16px 12px;
-    margin: 0 0 24px 0;
+    margin: 6px 0 6px 0;
+    box-shadow: 0 0 10px #00000012;
   }
 
   & label {
