--- a/web/app/views/layouts/classifier/_classifier.html.erb
+++ b/web/app/views/layouts/classifier/_classifier.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><img src="<%= event.cover_url :feed %>" style="width: 130px"></td>
   <td><a href="<%= event.url %>"> <%= limit_name_size event.details_name %> </a></td>
-  <td><%= event.place_details_name %></td>
+  <td><%= link_to event.place_details_name, train_path(place: event.place.slug) %></td>
   <td>
     <%= limit_description_size event.details_description, 565 %> <br/>
     <%#= event.ml_data.inspect %>
@@ -44,5 +44,3 @@
     </div>
   </td>
 </tr>
-
-
