Adjust in events saved style

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -14,6 +14,105 @@ $description-color: $font-secondary-color;
     border-radius: 2px;
   }
 
+  .me-saves & {
+    min-height: 132px;
+    cursor: pointer;
+    font-size: 11px;
+    border: 0;
+    box-shadow: none;
+    background-color: inherit;
+    @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
+    @include mdc-layout-grid-media-query_("phone") {
+      min-height: 100px;
+    }
+
+    &__title,
+    &__date {
+      pointer-events: none;
+      margin: 3px 0 0 0;
+      line-height: 1.3em;
+      color: $font-secondary-color;
+
+      &:hover {
+        background: inherit;
+      }
+    }
+
+    &__title {
+      color: $font-primary-color;
+      font-size: 13px;
+      margin: 12px 0 0 0;
+      font-weight: 400;
+      padding-right: 6px;
+    }
+
+    &__date {
+      color: $font-secondary-color;
+      text-transform: uppercase;
+      font-size: 11px;
+      margin: 8px 0 6px 0;
+      padding: 0 0 0 5px;
+      font-weight: 800;
+      min-height: 1.1em;
+      display: flex;
+      flex-direction: column;
+      @include mobile-only {
+        font-size: 9px;
+      }
+
+      &.hoje {
+        font-weight: 600;
+        //background: $brand-color;
+        color: $brand-color-aa;
+        font-size: 11px;
+        & i {
+          width: 6px;
+          height: 6px;
+          display: inline-block;
+          background: $brand-color;
+          border-radius: 3px;
+          margin: 0 3px 1px 0;
+          box-shadow: 0 0 6px $brand-color;
+        }
+      }
+
+      &.amanha {
+        font-weight: 600;
+        font-size: 11px;
+      }
+    }
+
+    &__remove {
+      background: transparentize($icon-background-color, 0.4);
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      width: 16px;
+      height: 16px;
+      cursor: pointer;
+      display: none;
+      z-index: 1;
+      border-radius: 100%;
+      fill: $font-secondary-color;
+      @include mdc-layout-grid-media-query_("phone") {
+        display: block;
+        padding: 3px;
+      }
+    }
+
+    & .mdc-card__media {
+      border-radius: $media-border-radius;
+      border-radius: $media-border-radius;
+      overflow: hidden;
+      //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      //box-shadow: $media-box-shadow-small;
+
+      &:hover {
+        //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
+      }
+    }
+  }
+
   & a:hover {
     color: $brand-color-aa;
   }
