Adjust time of animations in mobile

--- a/web/app/assets/stylesheets/_mixins.scss
+++ b/web/app/assets/stylesheets/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin is-show-in-animated() {
-  transition: opacity 0.4s ease, transform 0.4s ease;
+  transition: opacity 250ms ease, transform 250ms ease;
   will-change: opacity, transform;
   &.is-animated {
     opacity: 0;
@@ -10,13 +10,13 @@
 }
 
 @mixin is-open-up-animated() {
-  transition: opacity 0.4s ease, transform 0.4s ease;
+  transition: opacity 200ms ease, transform 250ms ease;
   will-change: opacity, transform;
   &.is-animated {
     opacity: 0;
     transform: translate(0, 85px);
     @include mdc-layout-grid-media-query_("phone") {
-      transform: translate(0, 25vh) scale(0.9);
+      transform: translate(0, 10vh) scale(0.95);
     }
   }
 }
