Adjust in notification style

--- a/web/app/assets/stylesheets/components/me-notification.scss
+++ b/web/app/assets/stylesheets/components/me-notification.scss
@@ -21,7 +21,7 @@
     }
   }
 
-  &[data-active="true"] {
+  &[data-notification-active="true"] {
     margin: 0;
     padding: 18px 0;
     box-shadow: none;
