--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -36,7 +36,8 @@
                 collection:  @items[:new_today],
                 title:       {
                     principal: "Adicionados recentemente",
-                    secondary: "Foram adicionados #{@items.dig(:new_today, :detail, :total_events_in_collection)} eventos nas últimas 24 horas que podem te interessar"
+                    # secondary: "Foram adicionados #{@items.dig(:new_today, :detail, :total_events_in_collection)} eventos nas últimas 24 horas que podem te interessar",
+                    tertiary:  "Com base no seu perfil"
                 },
                 type:        :large,
                 filters:     {
@@ -56,7 +57,8 @@
                 collection:  @items[:week],
                 title:       {
                     principal: "Acontecendo esta semana",
-                    secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 8, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})"
+                    # secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 8, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})",
+                    tertiary:  "Com base no seu perfil"
                 },
                 type:        :large,
                 filters:     {
@@ -115,7 +117,8 @@
                 collection:  @items[:user_suggestions],
                 title:       {
                     principal: "Escolhidos a dedo para #{current_user.first_name}",
-                    secondary: "Explore os eventos com alta recomendação para seu gosto pessoal"
+                    # secondary: "Explore os eventos com alta recomendação para seu gosto pessoal",
+                    tertiary:  "Com base nos eventos salvos"
                 },
                 type:        :large,
                 filters:     {
