--- a/web/app/views/feeds/suggestions.html.erb
+++ b/web/app/views/feeds/suggestions.html.erb
@@ -4,6 +4,6 @@
 
   <% content_for :meta_title, "Eventos sugeridos para #{current_user.first_name}" %>
 
-  <%= render partial: "components/collection/collection", locals: { data: @data } %>
+  <%= render partial: "components/collection/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
 
 </section>
