--- a/web/app/views/feeds/week.html.erb
+++ b/web/app/views/feeds/week.html.erb
@@ -13,7 +13,7 @@
 
   </script>
 
-  <%= render partial: "components/collection/collection", locals: {data: @data } %>
+  <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true} } %>
 
   <% unless current_user %>
     <%= link_to root_path, style: "display: flex" do %>
