--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -21,7 +21,7 @@ $mdc-layout-grid-columns: (
       max-width: unset;
       padding: 12px 0 12px 0;
       margin: 0 auto;
-      border-bottom: 5px solid $surface-secondary-color;
+      border-bottom: 5px solid $surface-tertiary-color;
     }
 
     &:last-child {
