Adjust style for vertical and horizontal collection

--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -10,9 +10,13 @@
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   @include mdc-layout-grid-media-query_("phone") {
+    grid-column: 1 span;
     width: auto;
     padding: 0;
     margin: 6px 12px 35px 12px;
+    [data-section-disposition="vertical"] & {
+      margin: 6px 0 35px 0;
+    }
     .me-page--profile__section & {
       grid-column: 8 span;
       margin: 0 0 35px 0;
