--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -24,6 +24,28 @@ $mdc-layout-grid-columns: (
       border-bottom: 5px solid $surface-tertiary-color;
     }
 
+    &[data-section-disposition="horizontal"] {
+      & .mdc-layout-grid__inner {
+        @include mdc-layout-grid-media-query_("phone") {
+          grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
+          overflow-y: hidden;
+          grid-template-columns: repeat(100, minmax(70vw, 1fr));
+          padding: 0 70px 0 $section-padding-phone;
+        }
+      }
+    }
+
+    &[data-section-disposition="vertical"] {
+      & .mdc-layout-grid__inner {
+        @include mdc-layout-grid-media-query_("phone") {
+          grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
+          overflow-y: hidden;
+          grid-template-columns: repeat(1, minmax(100%, 1fr));
+          padding: 0 $section-padding-phone;
+        }
+      }
+    }
+
     &:last-child {
       @include mdc-layout-grid-media-query_("phone") {
         //border-bottom: 0;
@@ -64,6 +86,7 @@ $mdc-layout-grid-columns: (
         padding: 0 $section-padding-phone;
         font-size: 11px;
       }
+
       .me-page--profile__section & {
         margin: 0 0 24px 0;
         @include mobile-only {
@@ -93,6 +116,22 @@ $mdc-layout-grid-columns: (
       }
     }
 
+    & .mdc-layout-grid__inner {
+      @include mdc-layout-grid-media-query_("desktop") {
+        @include mdc-layout-grid-inner(
+                $size: "desktop",
+                $margin: 0,
+                $gutter: 15px
+        );
+      }
+
+      &::-webkit-scrollbar {
+        @include mdc-layout-grid-media-query_("phone") {
+          display: none;
+        }
+      }
+    }
+
     & .mdc-layout-grid__cell {
       @include mdc-layout-grid-media-query_("desktop") {
         @include mdc-layout-grid-cell(
@@ -102,7 +141,6 @@ $mdc-layout-grid-columns: (
         );
       }
       @include mdc-layout-grid-media-query_("phone") {
-        //scroll-snap-align: center;
         @include mdc-layout-grid-cell(
                 $size: "phone",
                 $default-span: 1,
@@ -136,18 +174,6 @@ $mdc-layout-grid-columns: (
 
     }
 
-    //& i {
-    //  font-style: normal;
-    //  font-weight: 500;
-    //  @include mdc-layout-grid-media-query_("phone") {
-    //    //display: none;
-    //  }
-    //}
-
-    //& a {
-      //color: $brand-color;
-      //text-decoration: underline;
-    //}
   }
 
   &__load-more {
@@ -164,8 +190,8 @@ $mdc-layout-grid-columns: (
         }
       }
 
-      [data-controller="feeds"][data-action="index"] [data-section-load-more-loading="true"] & {
-        //display: none;
+      [data-controller="feeds"][data-action="index"] [data-section-disposition="vertical"] & {
+        display: block;
       }
     }
 
@@ -174,6 +200,10 @@ $mdc-layout-grid-columns: (
       will-change: opacity;
       order: 1000;
       display: none;
+
+      [data-controller="feeds"][data-action="index"] [data-section-disposition="vertical"] & {
+        display: none;
+      }
 
       [data-controller="feeds"][data-action="index"] & {
         @include mobile-only {
@@ -220,11 +250,6 @@ $mdc-layout-grid-columns: (
 
     }
 
-    //& .mdc-button {
-    //  font-family: $font-secondary-family;
-    //  font-size: 14px;
-    //  font-weight: 600;
-    //}
   }
 
   &__divider {
@@ -262,14 +287,6 @@ $mdc-layout-grid-columns: (
     }
   }
 
-  & .me-chip-set {
-    //margin: 2px 0 6px 0;
-    //background: #f9f9f9;
-    //border-radius: 3px;
-    //display: inline;
-  }
-
-
   & .mdc-typography--headline1 {
     @include mdc-layout-grid-media-query_("tablet") {
       padding: var(--mdc-layout-grid-margin-phone, 16px);
@@ -296,41 +313,8 @@ $mdc-layout-grid-columns: (
     --mdc-layout-grid-margin-desktop: 0;
     --mdc-layout-grid-gutter-desktop: 25px 16px;
 
-    @include mdc-layout-grid-media-query_("phone") {
-      // background-color: $surface-color;
-      // border-radius: 20px;
-      // border-radius: 20px;
-      // margin-bottom: 35px;
-      // @include mdc-elevation($z-value: 4);
-    }
-
     & a {
       text-decoration: none;
-    }
-  }
-
-
-  & .mdc-layout-grid__inner {
-    @include mdc-layout-grid-media-query_("desktop") {
-      @include mdc-layout-grid-inner(
-              $size: "desktop",
-              $margin: 0,
-              $gutter: 15px
-      );
-    }
-
-    @include mdc-layout-grid-media-query_("phone") {
-      //scroll-snap-type: x;
-      grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
-      grid-template-columns: repeat(100, minmax(70vw, 1fr));
-      overflow-y: hidden;
-      padding: 0 70px 0 $section-padding-phone;
-    }
-
-    &::-webkit-scrollbar {
-      @include mdc-layout-grid-media-query_("phone") {
-        display: none;
-      }
     }
   }
 
