--- a/web/app/views/collections/collection.js.erb
+++ b/web/app/views/collections/collection.js.erb
@@ -5,7 +5,7 @@
 
 		requestIdleCallback(function () {
 			requestAnimationFrame(function () {
-				const morph = morphdom.default(sectionElem, '<%= j render partial: "components/collection/collection", locals: {data: @data} %>'.trim(), {
+				const morph = morphdom.default(sectionElem, '<%= j render partial: "components/collection/collection", locals: {data: @data, props: @props} %>'.trim(), {
 					onBeforeElUpdated: function (fromEl, toEl) {
 						if (fromEl.dataset.fixed == 'true') {
 							return false
