--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -31,13 +31,13 @@
     <% if current_user&.personas_assortment_finished? %>
       <% if @items.dig(:new_today, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
         <%= render partial: "components/collection/collection", locals: {
-            data: {
+            data:  {
                 identifier:  'new-today',
                 collection:  @items[:new_today],
                 title:       {
                     principal: "Adicionados recentemente",
                     # secondary: "Foram adicionados #{@items.dig(:new_today, :detail, :total_events_in_collection)} eventos nas últimas 24 horas que podem te interessar",
-                    tertiary:  "Com base no seu perfil"
+                    tertiary: "Com base no seu perfil"
                 },
                 type:        :large,
                 filters:     {
@@ -47,27 +47,36 @@
                 },
                 continue_to: "/#{current_user.slug}/novos",
                 origin:      :feed
+            },
+            props: {
+                disposition: :horizontal
             }
         } %>
       <% end %>
-      <% if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+
+
+      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
         <%= render partial: "components/collection/collection", locals: {
-            data: {
-                identifier:  'this-week',
-                collection:  @items[:week],
+            data:  {
+                identifier:  'user-suggestions',
+                collection:  @items[:user_suggestions],
                 title:       {
-                    principal: "Acontecendo esta semana",
-                    # secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 8, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})",
-                    tertiary:  "Com base no seu perfil"
+                    principal: "Escolhidos a dedo para #{current_user.first_name}",
+                    # secondary: "Explore os eventos com alta recomendação para seu gosto pessoal",
+                    tertiary: "Com base nos eventos salvos"
                 },
                 type:        :large,
                 filters:     {
-                    categories: false,
+                    categories: true,
                     kinds:      false,
-                    ocurrences: true
+                    ocurrences: false
                 },
-                continue_to: '/porto-alegre/eventos/semana',
-                origin:      :feed
+                detail:      @items[:user_suggestions][:detail],
+                origin:      :feed,
+                continue_to: "/#{current_user.slug}/sugestoes"
+            },
+            props: {
+                disposition: :horizontal
             }
         } %>
       <% end %>
@@ -88,7 +97,7 @@
           </div>
         <% end %>
         <%= render partial: "components/collection/collection", locals: {
-            data: {
+            data:  {
                 identifier:  'follow',
                 collection:  @items[:follow],
                 title:       {
@@ -105,58 +114,41 @@
                 origin:      :feed,
                 continue_to: "/#{current_user.slug}/seguindo"
 
+            },
+            props: {
+                disposition: :horizontal
             }
         } %>
       <% end %>
 
 
-      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+
+      <% if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
         <%= render partial: "components/collection/collection", locals: {
-            data: {
-                identifier:  'user-suggestions',
-                collection:  @items[:user_suggestions],
+            data:  {
+                identifier:  'this-week',
+                collection:  @items[:week],
                 title:       {
-                    principal: "Escolhidos a dedo para #{current_user.first_name}",
-                    # secondary: "Explore os eventos com alta recomendação para seu gosto pessoal",
-                    tertiary:  "Com base nos eventos salvos"
+                    principal: "Acontecendo esta semana",
+                    # secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 8, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})",
+                    tertiary: "Com base no seu perfil"
                 },
                 type:        :large,
                 filters:     {
-                    categories: true,
-                    kinds:      false,
-                    ocurrences: false
-                },
-                detail:      @items[:user_suggestions][:detail],
-                origin:      :feed,
-                continue_to: "/#{current_user.slug}/sugestoes"
-
-            }
-        } %>
-
-      <% end %>
-
-
-      <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-        <%= render partial: "components/collection/collection", locals: {
-            data: {
-                identifier: 'user-personas',
-                collection: @items[:user_personas],
-                title:      {
-                    principal: "Gostos parecidos",
-                    secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
-                },
-                type:       :large,
-                filters:    {
-                    categories: true,
+                    categories: false,
                     kinds:      false,
                     ocurrences: true
                 },
-                detail:     @items[:user_personas][:detail],
-                origin:     :feed
-
+                continue_to: '/porto-alegre/eventos/semana',
+                origin:      :feed
+            },
+            props: {
+                disposition:     :vertical,
+                infinite_scroll: true
             }
         } %>
       <% end %>
+
 
       <% if @items.dig(:explorer, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
         <%= render partial: "components/collection/collection", locals: {
