--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -21,7 +21,10 @@
           kinds:      true,
           ocurrences: true
       },
-      insert_after: nil
+      categories:                  [],
+      ocurrences:                  [],
+      kinds:                       [],
+      insert_after:                nil
   }.deep_merge!(data)
 
   props = {
@@ -39,6 +42,11 @@
          data-section-load-more-loading="false"
          data-section-infinite-scroll="<%= props[:infinite_scroll] %>"
          data-section-disposition="<%= props[:disposition] %>"
+         data-section-identifier="<%= data[:identifier] %>"
+         data-section-init-filters-applyed="<%= data[:collection][:detail][:init_filters_applyed].to_json %>"
+         data-section-origin="<%= data[:origin] %>"
+         data-section-continue-to-path="<%= data[:continue_to] %>"
+         data-section-title="<%= data[:title].to_json %>"
          data-observable="float-menu.section"
          id="<%= data[:identifier] %>">
   <div class="me-feed__section-head">
@@ -74,33 +82,32 @@
         <%= data[:title][:custom] %>
       </div>
     <% end %>
+    <% unless data[:title][:custom] %>
     <div class="me-filter"
-         data-controller="filter"
-         data-filter-section-identifier="<%= data[:identifier] %>"
-         data-filter-title="<%= data[:title].to_json %>"
-         data-filter-init-filters-applyed="<%= data[:collection][:detail][:init_filters_applyed].to_json %>"
-         data-filter-origin="<%= data[:origin] %>"
-         data-filter-continue-to-path="<%= data[:continue_to] %>"
-         data-target="filter.filterContainer section.filter">
+         data-target="section.filter">
       <% if data[:filters][:categories] && !data[:collection][:categories].blank? %>
         <%= render(partial: 'feeds/filter',
                    locals:  {
-                       initial_filters:              data[:collection][:categories],
-                       params_filters:               params[:categories],
-                       filters_that_exist_in_events: data[:collection][:categories],
-                       icon_type:                    'filter_list',
-                       type:                         'categories'
+                       data: {
+                           initial_filters:              data[:collection][:categories],
+                           params_filters:               data[:categories],
+                           filters_that_exist_in_events: data[:collection][:categories],
+                           icon_type:                    'filter_list',
+                           type:                         'categories'
+                       }
                    },
                    cached:  true) %>
       <% end %>
-      <% if (data[:filters][:kinds] && params[:categories] && !data[:collection][:kinds].blank?) || (data[:filters][:kinds] && !params[:kinds].blank?) %>
+      <% if (data[:filters][:kinds] && data[:categories] && !data[:collection][:kinds].blank?) || (data[:filters][:kinds] && !params[:kinds].blank?) %>
         <%= render(partial: 'feeds/filter',
                    locals:  {
-                       initial_filters:              data[:collection][:kinds],
-                       params_filters:               params[:kinds],
-                       filters_that_exist_in_events: data[:collection][:kinds],
-                       icon_type:                    'filter_list',
-                       type:                         'kinds'
+                       data: {
+                           initial_filters:              data[:collection][:kinds],
+                           params_filters:               data[:kinds],
+                           filters_that_exist_in_events: data[:collection][:kinds],
+                           icon_type:                    'filter_list',
+                           type:                         'kinds'
+                       }
                    },
                    cached:  true) %>
       <% end %>
@@ -109,15 +116,18 @@
         <%= data[:title][:ocurrences] %>
         <%= render(partial: 'feeds/filter',
                    locals:  {
-                       initial_filters:              data[:collection][:ocurrences],
-                       params_filters:               params[:ocurrences],
-                       filters_that_exist_in_events: data[:collection][:ocurrences],
-                       icon_type:                    '',
-                       type:                         'ocurrences'
+                       data: {
+                           initial_filters:              data[:collection][:ocurrences],
+                           params_filters:               data[:ocurrences],
+                           filters_that_exist_in_events: data[:collection][:ocurrences],
+                           icon_type:                    '',
+                           type:                         'ocurrences'
+                       }
                    },
                    cached:  true) %>
       <% end %>
     </div>
+    <% end %>
   </div>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner"
@@ -177,23 +187,23 @@
                cached:  true) if mobile_device? && props[:disposition] == 'horizontal' %>
     <% if data[:collection][:detail][:actual_events_in_collection] < data[:collection][:detail][:total_events_in_collection] %>
       <div class="me-feed__load-more me-feed__load-more--vertical">
-        <% if data[:origin] == :feed %>
-          <button class="me-button me-button--transparent me-button--with-icon-in-right mdc-button"
-                  data-action="click->section#loadMore"
-                  data-target="section.loadMoreButton">
-            <span class="me-button__label">Ver tudo</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
-              <path fill="none" d="M0 0h24v24H0V0z"/>
-              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/>
-            </svg>
-          </button>
-        <% else %>
-          <button class="me-button me-button--transparent me-button--with-icon-in-right mdc-button"
-                  data-target="section.loadMoreButton"
-                  data-action="click->section#loadMore">
-            <span class="me-button__label">Mostrar mais</span>
-          </button>
-        <% end %>
+        <%# if data[:origin] == :feed %>
+        <!--          <button class="me-button me-button--transparent me-button--with-icon-in-right mdc-button"-->
+        <!--                  data-action="click->section#loadMore"-->
+        <!--                  data-target="section.loadMoreButton">-->
+        <!--            <span class="me-button__label">Mostrar mais</span>-->
+        <!--            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">-->
+        <!--              <path fill="none" d="M0 0h24v24H0V0z"/>-->
+        <!--              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/>-->
+        <!--            </svg>-->
+        <!--          </button>-->
+        <%# else %>
+        <button class="me-button me-button--transparent me-button--with-icon-in-right mdc-button"
+                data-target="section.loadMoreButton"
+                data-action="click->section#loadMore">
+          <span class="me-button__label">Mostrar mais</span>
+        </button>
+        <%# end %>
       </div>
     <% end %>
     <% unless data[:collection][:events] %>
