--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -67,7 +67,7 @@
                 },
                 type:        :large,
                 filters:     {
-                    categories: true,
+                    categories: false,
                     kinds:      false,
                     ocurrences: false
                 },
