--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -5,7 +5,7 @@
 $gutter: 6px;
 
 .me-saves {
-  margin: 35px auto 0 auto;
+  margin: 35px auto 35px auto;
   //padding: 0 0 25px 0;
   max-width: $main-content-width;
   position: relative;
