Fix in search page

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -43,7 +43,7 @@
                 filters:     {
                     categories: false,
                     kinds:      false,
-                    ocurrences: true
+                    ocurrences: false
                 },
                 continue_to: "/#{current_user.slug}/novos",
                 origin:      :feed
