--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -74,11 +74,11 @@
 
     @include mdc-layout-grid-media-query_("phone") {
       & .mdc-layout-grid {
-        padding: 0 24px;
+        //padding: 0 24px;
       }
 
       & .mdc-layout-grid__cell {
-        grid-column-end: span 8;
+        //grid-column-end: span 8;
       }
 
       & .me-feed__section {
