--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -12,5 +12,5 @@
 
   </script>
 
-  <%= render partial: "components/collection/collection", locals: {data: @data} %>
+  <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true}} %>
 </section>
