--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -65,7 +65,7 @@
                 <div class="me-card__date <%= event.day_of_week['decorator'].parameterize %>" data-target="saves-events.date">
                   <span><i></i> <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %></span>
                   <span class="me-card__date-distance-in-words">
-                    <%= "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
+                    <%= event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
                   </span>
                 </div>
               </a>
