Add categories list to search page

--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -8,6 +8,9 @@
     .me-feed__section-head & {
       padding: 0 25px 0 15px;
     }
+    [data-controller="search"][data-action="index"] & {
+      width: auto;
+    }
   }
 
 
