--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -5,6 +5,21 @@
   background: $surface-secondary-color;
   color: $font-secondary-color;
 
+  .me-feed__section-title-custom & {
+    color: $font-tertiary-color;
+    font-size: 13px;
+
+    &.new {
+      color: $brand-color-aa;
+      font-weight: 600;
+    }
+
+    & svg {
+      fill: $font-tertiary-color;
+      margin: 0 6px 0 0;
+    }
+  }
+
   .me-card__primary-section & {
     background: $surface-color;
     color: $font-tertiary-color;
@@ -15,7 +30,7 @@
     //padding: 0 10px;
     height: auto;
     line-height: 1;
-    padding: 6px 8px;
+    padding: 6px 10px;
 
     &.me-card__date {
       box-shadow: none;
@@ -27,6 +42,7 @@
       color: $brand-color-aa;
       padding: 4px 10px;
       font-size: 11px;
+
       & i {
         width: 6px;
         height: 6px;
@@ -57,6 +73,7 @@
     font-size: 11px;
     background: $surface-secondary-color;
     color: $font-tertiary-color;
+
     & a {
       color: $font-tertiary-color;
     }
@@ -66,7 +83,18 @@
     }
   }
 
-  //&.mdc-chip {
-  //  font-family: $font-secondary-family;
-  //}
+  &__counter {
+    font-style: normal;
+    margin: 0 0 0 6px;
+    background: $surface-color;
+    border-radius: 12px;
+    width: 19px;
+    text-align: center;
+    font-size: 9px;
+
+    //.new & {
+    //  color: $brand-color;
+    //  font-weight: 600;
+    //}
+  }
 }
